fix: change laravel to use placa in requests
